Fix images being too wide on narrow screens

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -121,6 +121,7 @@ figure {
         img {
             display: block;
             margin: 0 auto;
+            max-width: 100vw;
         }
     }
 
